$Header: /cvsroot/arsperl/ARSperl/CHANGES,v 1.13 1997/11/04 18:15:20 jcmurphy Exp $

CHANGES for ARSperl

Revision history for ARSperl.

MM/DD/YY
=======================================================================
#######################################################################
=======================================================================
11/04/97	(1.5205)

  o (JCM)  updated the groupList value returned by GetSchema()
           so that it contains the correct key words.

=======================================================================
#######################################################################
=======================================================================
10/29/97        (1.5204)

  o (JCM)  added ars_GetControlStructFields()

=======================================================================
#######################################################################
=======================================================================
10/20/97        (1.5203)
 
  o (JCM)  beginnings of a WinNT port (not completed yet)
  o (JCM)  added "timestamp" to the return hash of GetEscalation()
  o (JCM)  added some extra malloc/free debugging stuff

=======================================================================
#######################################################################
=======================================================================
10/13/97        (1.5202)
 
  o (JCM)  removed a superfluous debugging statement

=======================================================================
#######################################################################
=======================================================================
10/09/97        (1.5201)
 
  o (JCM)  fixed problem in GetEscalation     

=======================================================================
#######################################################################